<package format="2">
    <name>hello_2_properties</name>
    <version>0.0.0</version>
    <description>
        This package contains the components of the hello_2_properties package
    </description>
    <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
    <license>BSD</license>
    <depend>rtt</depend>
    <depend>ocl</depend>
</package>
