<package format="2">
    <name>hello_3_dataports</name>
    <version>0.0.0</version>
    <description>
        This package contains the components of the hello-1-task-execution package
    </description>
    <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
    <license>BSD</license>
    <depend>rtt</depend>
    <depend>ocl</depend>
</package>
